# ali_pay2play_website

./: CNAME  README.md  package-lock.json  package.json
backend/: app.py  main.py  pyproject.toml  requirements.txt
backend/cleaning_scripts/: p2p_contributions.py
backend/cleaning_scripts/candidate_contributions/: Combined_P2P_Contributions.xlsx  JimMcGreeveyContributions.csv  MussabAliContributions.csv
backend/cleaning_scripts/output/: Bill_O'Dea_combined_contributions.csv  Bill_O'Dea_top_donors.csv  Bill_O'Dea_top_employers.csv  Bill_O'Dea_top_occupations.csv  James_Solomon_top_employers.csv  Jim_McGreevey_top_donors.csv  Jim_McGreevey_top_employers.csv  Joyce_Watterman_combined_contributions.csv  Joyce_Watterman_top_donors.csv  Joyce_Watterman_top_employers.csv  Mussab_Ali_combined_contributions.csv  Mussab_Ali_top_donors.csv
backend/cleaning_scripts/raw/: P2P_2019_Contributions.html  P2P_2020_Contributions.html  P2P_2021_Contributions.html
backend/data/: main.py
backend/data/cleaned/: JimMcGreeveyContributions.csv  JoyceWattermanContributions.csv
backend/data/cleaning_scripts/: JamesSolomonContributions.csv  campaigndonations.py  contracts.py  p2p_contributions.py  recipient_names.py
backend/data/output/: Bill_O'Dea_combined_contributions.csv  Bill_O'Dea_top_donors.csv  Bill_O'Dea_top_employers.csv  James_Solomon_combined_contributions.csv  Jim_McGreevey_combined_contributions.csv  Jim_McGreevey_top_donors.csv  Jim_McGreevey_top_employers.csv  Joyce_Watterman_combined_contributions.csv  Joyce_Watterman_top_employers.csv  Mussab_Ali_top_employers.csv  (+2 more)
(+98 files in other folders)
