[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "koensantos",email = "95321766+koensantos@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
